# HumanArchive

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  README_EN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  ethical_concern.md  feature_request.md  translation.md
.github/workflows/: build_landing.py  build_seo.py  ci.yml  pages.yml  release.yml
archive/: CATEGORY_TREE.md  GRAPH.md  TAGS.md  graph.json  rag_index.json
archive/events/2024-example-dam-release-demo/: 91cad680ad3e8161.json  _SAMPLE_DATA_DISCLAIMER.md  _index.json
archive/events/2024-example-village-flood-demo/: 14e0724310a34418.json  2080aaba4fd5bc14.json  71a057cb260b8909.json  7cb3c65efc24254b.json  HISTORICAL_ENTRY.md  PRISM.md  _SAMPLE_DATA_DISCLAIMER.md  _index.json  d4842c4d766d5dc3.json  d5980f0c48c19656.json
core/: ai_engine.py  annotations.py  graph.py  integrity.py  trauma.py  trauma_llm.py
core/llm/: __init__.py  claude_client.py
core/privacy/: __init__.py  llm_pii.py  pii_scrubber.py
core/rag/: __init__.py  answer.py  claims.py  embedder.py  index.py
core/schema/: annotation.json  memory.json
core/verification/: __init__.py  cross_check.py
docs/: AGENT.md  COMPARISON.md  FAQ.md  USE_CASES.md  architecture.md  deploy.md  ethics.md  event_decomposition.md  federation.md  rag.md  workflows.md
humanarchive/: __init__.py  __main__.py  agent.py  cli.py  mcp_server.py
scripts/: demo.sh  gen_social_card.py
taxonomy/: categories.json
tests/: conftest.py  test_agent_api.py  test_annotations.py  test_bundle.py  test_ethics.py  test_graph.py  test_integrity.py  test_js_python_parity.py  test_mcp_server.py  test_privacy.py  test_pwa_i18n.py  test_rag.py  test_v08_tools.py  test_v10_tools.py
tools/: audit.py  bulk_import.py  bulk_import_example.csv  diff_archives.py  export_bundle.py  graph_export.py  import_bundle.py  obsidian_export.py  rag_query.py  staging.py  submit.py  timeline_export.py  verify_signatures.py
trust/: README.md  REVOCATIONS.md  reviewers.json
web/: README.md  app.js  hash_embed.js  i18n.js  index.html  manifest.webmanifest  offline.html  pwa.js  style.css  submit.html  submit.js  sw.js
web/i18n/: en.json  fr.json  vi.json
